# BongBariComedy

./: ## GitHub Copilot Chat.md  .env  .env.example  .gitignore  .replit  10_PHRASE_TRIM_RESCUE_PLAN.md  1774979378063-player-script.js  404.html  ADR_FREE_API_STRATEGY.md  AI_VOICE_HUB_TRANSFER_PROTOCOL.md  ANTIGRAVITY_DOM_TEST_PLAN.md  ANTIGRAVITY_TRANSFER_PROTOCOL.md  BONGBOT_3D_IMPLEMENTATION_PLAN.md  BONGBOT_CAPABILITY_MAP.md  BONGBOT_HANDOFF_V3.md  BONGBOT_PHASE_PLAN.md  BONGBOT_RESEARCH_PROMPTS.md  BONGSHARE_AGENT_HANDOFF.md  BONGSHARE_ARCHITECTURE.md  BONGSHARE_ARCHITECTURE_V3.md  BONGSHARE_FUTURE_STORAGE_PLAN.md  BONGSHARE_PROXY_UPLOAD_PLAN.md  BONGSHARE_UPGRADE_PLAN.md  BONGSHARE_UPGRADE_PLAN_V2.md  BONGSHARE_VIBE_STATUS.md  BONG_BARI_TRIMMER_PROGRESS.md  BONG_NGL_MASTER_STATUS.md  BONG_SHARE_ARCHITECTURE.md  BongBari_Onboarding_Guide.md  CAPCUT_TRIMMER_ENGINEERING_PLAN.md  CLIENT_IP_ARCHITECTURE.md  CLIENT_IP_TOOLS.md  CLIENT_PROXY_CLOAKING_EXPLAINER.md  CLIENT_SIDE_EXTRACTION_DESIGN.md  CNAME  COBALT_AGGREGATOR_PLAN.md  COBALT_VS_RENDER_TRUTH.md  Collect_Logs.bat  DEPLOY_RULES.md  DNS_SETUP_BONGBARI.md  (+352 more)
.dev/: promo.json
.github/: copilot-instructions.md
Humanizer/: RESERACH.txt  Report.txt  Scaling the BongBari V9 Humanizer Engine.docx  V9 Humanizer System Architecture and Production Design.xlsx
New_Website_Workflow/: 01_Stitch_Workflow_Overview.md  02_Agent_Handover_Instructions.md  03_Prompting_Guide.md  04_Stitch_Loop_Guide.md  05_Beginner_Step_By_Step_Guide.md
infra/: Caddyfile  (+1 more)
server/rust-verifier/: Cargo.toml
server/rust-verifier/src/: main.rs
(+451 files in other folders)
